add post movie search

--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -1,2 +1,11 @@
 <button (click)="getQueryShow()"> Test get query show </button>
+
+<h1>Movie Search</h1>
+<form id="searchForm" method="post">
+    <fieldset>
+        <input id="s" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" placeholder="Type here..." [ngModelOptions]="{standalone: true}"/>
+        <button (click)="DoSearch()"> Find </button>
+    </fieldset>
+</form>
+
 <p> Output : {{ getData}}</p>
