add material design

--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -1,3 +1,10 @@
+<md-toolbar color="primary">
+  Angular Material2 Example App
+
+  <span class="app-toolbar-filler"></span>
+
+</md-toolbar>
+
 <header>
   <form id="searchForm" method="post">
     <input id="s" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" placeholder="Type here..." [ngModelOptions]="{standalone: true}"/>
