--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -7,27 +7,24 @@
   </md-input-container>
 </md-toolbar>
 
+<md-card *ngFor="let oneData of getData" class="card-search">
 
+    <div class="center-image" *ngIf="oneData.show.image.medium != null">
+      <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
+    </div>
+    <md-card-header>
+      <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
+      <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
+    </md-card-header>
 
+     <md-card-content>
+      <p [innerHTML]="oneData.show.summary"></p>
+    </md-card-content>
+    <md-card-actions>
+      <button md-raised-button>TRADUIRE</button>
+  </md-card-actions>
 
-
-
-    <md-card *ngFor="let oneData of getData" class="card-search">
-      <div class="center-image">
-        <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
-      </div>
-      <md-card-header>
-        <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
-        <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
-      </md-card-header>
-
-       <md-card-content>
-        <p [innerHTML]="oneData.show.summary"></p>
-      </md-card-content>
-      <md-card-actions>
-        <button md-raised-button>TRADUIRE</button>
-      </md-card-actions>
-    </md-card>
+</md-card>
 
 
 
