--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -21,11 +21,11 @@
         <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
       </md-card-header>
 
-       <md-card-content>
+       <md-card-content [(ngModel)]="summaryTranslation">
         <p [innerHTML]="oneData.show.summary"></p>
       </md-card-content>
       <md-card-actions>
-        <button md-raised-button>TRADUIRE</button>
+        <button md-raised-button (click)="translateText(oneData.show.summary,oneData.show.id)">TRADUIRE</button>
       </md-card-actions>
     </md-card>
 
