--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -9,7 +9,7 @@
 
 <md-card *ngFor="let oneData of getData" class="card-search">
 
-    <div class="center-image" *ngIf="oneData.show.image.medium != null">
+    <div class="center-image" *ngIf="oneData.show.image != null">
       <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
     </div>
     <md-card-header>
