--- a/src/app/tvmaze/tvmaze.component.css
+++ b/src/app/tvmaze/tvmaze.component.css
@@ -17,7 +17,12 @@ img{
 }
 
 input {
-  color: black;
+  color: white;
+  height: 30px;
+}
+
+.padding-fix{
+  padding-right: 20px;
 }
 @media only screen and (max-width: 768px) {
   .card-search{
