--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -18,7 +18,7 @@
       <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
     </md-card-header>
 
-    <md-card-content [(ngModel)]="summaryTranslation">
+    <md-card-content>
       <p [innerHTML]="oneData.show.summary"></p>
     </md-card-content>
     <md-card-actions>
