--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -6,29 +6,37 @@
     <button md-raised-button (click)="DoSearch()"> Rechercher </button>
   </md-input-container>
 </md-toolbar>
-
-
-
-
-
-
-    <md-card *ngFor="let oneData of getData" class="card-search">
-      <div class="center-image">
-        <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
-      </div>
-      <md-card-header>
-        <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
-        <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
-      </md-card-header>
-
-       <md-card-content>
-        <p [innerHTML]="oneData.show.summary"></p>
-      </md-card-content>
-      <md-card-actions>
-        <button md-raised-button>TRADUIRE</button>
-      </md-card-actions>
-    </md-card>
-
-
-
+<md-card *ngFor="let oneData of getData" class="card-search">
+  <div class="center-image">
+    <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
+  </div>
+  <md-card-header>
+    <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
+    <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
+  </md-card-header>
+   <md-card-content>
+    <p [innerHTML]="oneData.show.summary"></p>
+  </md-card-content>
+  <md-card-actions>
+    <section class="moreDetails">
+      Afficher plus de détails <md-checkbox [(ngModel)]="oneData.show.id"></md-checkbox>
+    </section>
+  </md-card-actions>
+  <md-card-content>
+    <p *ngIf="!oneData.show.id">
+      Durée moyenne: {{oneData.show.runtime}}
+    </p>
+  </md-card-content> <md-card-content>
+    <p *ngIf="!oneData.show.id">
+      Sorti le:{{oneData.show.premiered | date:'medium'}}
+    </p>
+  </md-card-content> <md-card-content>
+    <p *ngIf="!oneData.show.id">
+      {{oneData.show.language}}
+    </p>
+  </md-card-content>
+  <md-card-actions>
+    <button md-raised-button>TRADUIRE</button>
+  </md-card-actions>
+</md-card>
 
