Correction du selecteur pour la traduction

--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -17,7 +17,7 @@
       <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
     </md-card-header>
 
-    <md-card-content>
+    <md-card-content class="text-translate">
       <p [innerHTML]="oneData.show.summary"></p>
     </md-card-content>
   <md-card-actions>
