--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
     <md-card-header>
       <md-card-title id="{{oneDataSchedule.show.id}}"><h2>{{oneDataSchedule.show.name}}</h2></md-card-title>
       <md-card-subtitle *ngIf="oneDataSchedule.airstamp">Diffusé le : {{oneDataSchedule.airstamp | date:'medium'}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.rating.average">Diffusé le : {{oneDataSchedule.show.rating.average}}</md-card-subtitle>
+      <md-card-subtitle *ngIf="oneDataSchedule.show.rating.average">Note : {{oneDataSchedule.show.rating.average}}</md-card-subtitle>
+      <md-card-subtitle *ngIf="oneDataSchedule.show.network.name">Chaine : {{oneDataSchedule.show.network.name}}</md-card-subtitle>
+      <md-card-subtitle *ngIf="oneDataSchedule.show.network.country">Pays : {{oneDataSchedule.show.network.country.name}}</md-card-subtitle>
     </md-card-header>
   </md-card>
 </div>
