--- a/src/app/tvmaze/tvmaze.component.css
+++ b/src/app/tvmaze/tvmaze.component.css
@@ -1,6 +1,32 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-.card-search{
+
+md-toolbar {
+  position: fixed;
+  z-index: 3;
+  top:0;
+}
+
+.cache-div-search {
+  display: none;
+}
+
+.div-search {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+  width: 100%;
+  z-index:2;
+}
+
+.div-search-scroll {
+  min-height:100%;
+  background-color: #f3f3f3;
+}
+
+.card-search {
   width:1000px;
   margin:0 auto;
   margin-bottom: 15px;
