--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -1,22 +1,41 @@
 <md-toolbar color="primary">
-  <span class="padding-fix">MovieSearch</span>
-
-  <md-input-container>
-    <input mdInput type="search" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" [ngModelOptions]="{standalone: true}"/>
-    <button md-raised-button (click)="DoSearch()"> Rechercher </button>
-  </md-input-container>
+    <span class="padding-fix">MovieSearch</span>
+    <md-input-container>
+        <input mdInput type="search" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" [ngModelOptions]="{standalone: true}"/>
+        <button md-raised-button (click)="DoSearch()"> Rechercher </button>
+        <div style="float: right">
+            <button
+                    class="btn btn-primary btn-margin"
+                    *ngIf="!auth.isAuthenticated()"
+                    (click)="auth.login()">
+                Log In
+            </button>
+            <button
+                    class="btn btn-primary btn-margin"
+                    *ngIf="auth.isAuthenticated()"
+                    routerLink="/profile">
+                Profile
+            </button>
+            <button
+                    class="btn btn-primary btn-margin"
+                    *ngIf="auth.isAuthenticated()"
+                    (click)="auth.logout()">
+                Log Out
+            </button>
+        </div>
+    </md-input-container>
 </md-toolbar>
-  <div class="div-search-scroll">
+
+<div class="div-search-scroll">
     <md-card *ngFor="let oneData of getData" class="card-search">
 
-      <div class="center-image" *ngIf="oneData.show.image != null">
-        <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
-      </div>
-      <md-card-header>
-        <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
-        <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
-      </md-card-header>
-
+            <div class="center-image" *ngIf="oneData.show.image != null">
+                <img md-card-image class="oneDataImage" src="{{oneData.show.image.medium}}">
+            </div>
+            <md-card-header>
+                <md-card-title id="{{oneData.show.id}}"><h2>{{oneData.show.name}}</h2></md-card-title>
+                <md-card-subtitle *ngIf="oneData.show.rating.average">Note: {{oneData.show.rating.average}}</md-card-subtitle>
+            </md-card-header>
       <md-card-content>
         <p [innerHTML]="oneData.show.summary"></p>
       </md-card-content>
@@ -41,6 +60,5 @@
       <md-card-actions>
         <button md-raised-button *ngIf="oneData.show.summary" (click)="translateText(oneData)">TRADUIRE</button>
       </md-card-actions>
-
     </md-card>
-  </div>
+</div>
