--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -39,7 +39,7 @@
   </p>
 </md-card-content>
     <md-card-actions>
-        <button md-raised-button *ngIf="oneData.show.summary" (click)="translateText(oneData.show.summary,oneData.show.id)">TRADUIRE</button>
+        <button md-raised-button *ngIf="oneData.show.summary" (click)="translateText(oneData)">TRADUIRE</button>
     </md-card-actions>
 
 </md-card>
