--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,19 +34,19 @@
 <div class="pagination-bar clearfix">
   <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
     <li [ngClass]="{disabled:pager.currentPage === 1}">
-      <a (click)="setPage(1)">First</a>
+      <a (click)="setPage(1)">Premier</a>
     </li>
     <li [ngClass]="{disabled:pager.currentPage === 1}">
-      <a (click)="setPage(pager.currentPage - 1)">Previous</a>
+      <a (click)="setPage(pager.currentPage - 1)">Précédent</a>
     </li>
     <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
       <a (click)="setPage(page)">{{page}}</a>
     </li>
     <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-      <a (click)="setPage(pager.currentPage + 1)">Next</a>
+      <a (click)="setPage(pager.currentPage + 1)">Suivant</a>
     </li>
     <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-      <a (click)="setPage(pager.totalPages)">Last</a>
+      <a (click)="setPage(pager.totalPages)">Dernier</a>
     </li>
   </ul>
 </div>
