--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -7,7 +7,7 @@
   </md-input-container>
 </md-toolbar>
 
-<div class="div-search" [ngClass]="{'':getData === null, 'cache-div-search': getData !== null}">
+<div class="div-search">
   <div class="div-search-scroll">
     <md-card *ngFor="let oneData of getData" class="card-search">
 
