--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,7 @@
 <app-tvmaze (isSearching)="onUpdate($event)"></app-tvmaze>
 
 <div class="homePage clearfix" [hidden]="programHidden">
-  <!--
-  <md-card *ngFor="let oneDataSchedule of getDataSchedule" class="card-schedule">
-    <div class="center-image">
-      <img md-card-image class="oneDataImage" src="{{oneDataSchedule.show.image.medium}}">
-    </div>
-    <md-card-header>
-      <md-card-title id="{{oneDataSchedule.show.id}}"><h2>{{oneDataSchedule.show.name}}</h2></md-card-title>
-      <md-card-subtitle *ngIf="oneDataSchedule.airstamp">Diffusé le : {{oneDataSchedule.airstamp | date:'medium'}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.rating.average">Note : {{oneDataSchedule.show.rating.average}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.network.name">Chaine : {{oneDataSchedule.show.network.name}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.network.country">Pays : {{oneDataSchedule.show.network.country.name}}</md-card-subtitle>
-    </md-card-header>
-  </md-card>
-  -->
-  <!-- items being paged -->
-  <!--<div *ngFor="let item of pagedItems">{{item.name}}</div> -->
+  <!-- Card list -->
   <md-card *ngFor="let oneDataSchedule of pagedItems" class="card-schedule">
     <div class="center-image">
       <img md-card-image class="oneDataImage" src="{{oneDataSchedule.show.image.medium}}">
@@ -30,7 +15,7 @@
     </md-card-header>
   </md-card>
 </div>
-  <!-- pager -->
+  <!-- pagination -->
 <div class="pagination-bar clearfix">
   <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
     <li [ngClass]="{disabled:pager.currentPage === 1}">
