--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,28 @@
-<app-tvmaze (isSearching)="onUpdate($event)"></app-tvmaze>
-
-<div class="homePage clearfix" [hidden]="programHidden">
-  <!-- Card list -->
-  <md-card *ngFor="let oneDataSchedule of pagedItems" class="card-schedule">
-    <div class="center-image">
-      <img md-card-image class="oneDataImage" src="{{oneDataSchedule.show.image.medium}}">
+<md-toolbar color="primary">
+  <span class="padding-fix">MovieSearch</span>
+  <md-input-container>
+    <div style="float: right">
+      <button
+              class="btn btn-primary btn-margin"
+              *ngIf="!auth.isAuthenticated()"
+              (click)="auth.login()">
+        Log In
+      </button>
+      <button
+              class="btn btn-primary btn-margin"
+              *ngIf="auth.isAuthenticated()"
+              routerLink="/profile">
+        Profile
+      </button>
+      <button
+              class="btn btn-primary btn-margin"
+              *ngIf="auth.isAuthenticated()"
+              (click)="auth.logout()">
+        Log Out
+      </button>
     </div>
-    <md-card-header>
-      <md-card-title id="{{oneDataSchedule.show.id}}"><h2>{{oneDataSchedule.show.name}}</h2></md-card-title>
-      <md-card-subtitle *ngIf="oneDataSchedule.airstamp">Diffusé le : {{oneDataSchedule.airstamp | date:'medium'}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.rating.average">Note : {{oneDataSchedule.show.rating.average}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.network.name">Chaine : {{oneDataSchedule.show.network.name}}</md-card-subtitle>
-      <md-card-subtitle *ngIf="oneDataSchedule.show.network.country">Pays : {{oneDataSchedule.show.network.country.name}}</md-card-subtitle>
-    </md-card-header>
-  </md-card>
-</div>
-
-<div class="pagination-bar clearfix" [hidden]="programHidden">
-  <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
-    <li [ngClass]="{disabled:pager.currentPage === 1}">
-      <a (click)="setPage(1)">Premier</a>
-    </li>
-    <li [ngClass]="{disabled:pager.currentPage === 1}">
-      <a (click)="setPage(pager.currentPage - 1)">Précédent</a>
-    </li>
-    <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
-      <a (click)="setPage(page)">{{page}}</a>
-    </li>
-    <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-      <a (click)="setPage(pager.currentPage + 1)">Suivant</a>
-    </li>
-    <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-      <a (click)="setPage(pager.totalPages)">Dernier</a>
-    </li>
-  </ul>
-</div>
-
+  </md-input-container>
+</md-toolbar>
 <main class="container">
   <router-outlet></router-outlet>
 </main>
