--- a/src/app/tvmaze/tvmaze.component.css
+++ b/src/app/tvmaze/tvmaze.component.css
@@ -53,6 +53,23 @@ input {
 .padding-fix{
   padding-right: 20px;
 }
+
+.btn-close{
+  float: right;
+  top: auto;
+  right: 20px;
+  bottom: 20px;
+  left: auto;
+  position: fixed;
+  z-index:2;
+}
+.fa-reply{
+  font-size: 22px;
+  color: #fff;
+}
+.mat-fab[_ngcontent-c3], .mat-mini-fab[_ngcontent-c3] {
+  background-color: #673ab7;
+}
 @media only screen and (max-width: 768px) {
   .card-search{
     width:100%;
