--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -35,4 +35,5 @@
         <button md-raised-button *ngIf="oneData.show.summary" (click)="translateText(oneData)">TRADUIRE</button>
       </md-card-actions>
     </md-card>
+  <button class="btn-close" (click)="goBack()" md-fab><md-icon><i class="fa fa-reply" aria-hidden="true"></i></md-icon></button>
 </div>
