--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,34 @@
 <md-toolbar color="primary">
-  <a routerLink="/home"><span class="padding-fix">MovieSearch</span></a>
-    <div style="float: right">
-      <button
-              class="btn btn-primary btn-margin"
-              *ngIf="!auth.isAuthenticated()"
-              (click)="auth.login()">
-        Log In
-      </button>
-      <button
-              class="btn btn-primary btn-margin"
-              *ngIf="auth.isAuthenticated()"
-              routerLink="/search">
-        Search
-      </button>
-      <button
-              class="btn btn-primary btn-margin"
-              *ngIf="auth.isAuthenticated()"
-              routerLink="/profile">
-        Profile
-      </button>
-      <button
-              class="btn btn-primary btn-margin"
-              *ngIf="auth.isAuthenticated()"
-              (click)="auth.logout()">
-        Log Out
-      </button>
-    </div>
+  <div>
+    <a routerLink="/home"><span class="padding-fix">MovieSearch</span></a>
+  </div>
+  <br>
+  <div class="les-btn">
+    <button md-raised-button
+            class="btn btn-primary btn-margin"
+            *ngIf="!auth.isAuthenticated()"
+            (click)="auth.login()">
+      Log In
+    </button>
+    <button md-raised-button
+            class="btn btn-primary btn-margin"
+            *ngIf="auth.isAuthenticated()"
+            routerLink="/search">
+      Search
+    </button>
+    <button md-raised-button
+            class="btn btn-primary btn-margin"
+            *ngIf="auth.isAuthenticated()"
+            routerLink="/profile">
+      Profile
+    </button>
+    <button md-raised-button
+            class="btn btn-primary btn-margin"
+            *ngIf="auth.isAuthenticated()"
+            (click)="auth.logout()">
+      Log Out
+    </button>
+  </div>
 </md-toolbar>
 <main class="container">
   <router-outlet></router-outlet>
