--- a/src/app/tvmaze/tvmaze.component.css
+++ b/src/app/tvmaze/tvmaze.component.css
@@ -70,6 +70,18 @@ input {
 .mat-fab[_ngcontent-c3], .mat-mini-fab[_ngcontent-c3] {
   background-color: #673ab7;
 }
+
+.searchBarre{
+  text-align: center;
+  margin: 50px;
+}
+
+
+input[_ngcontent-c3] {
+  color: #673ab7;
+  height: 30px;
+}
+
 @media only screen and (max-width: 768px) {
   .card-search{
     width:100%;
