--- a/src/app/tvmaze/tvmaze.component.html
+++ b/src/app/tvmaze/tvmaze.component.html
@@ -1,5 +1,9 @@
-<input mdInput type="search" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" [ngModelOptions]="{standalone: true}"/>
-<button md-raised-button (click)="DoSearch()"> Rechercher </button>
+<div class="searchBarre">
+  <md-input-container class="example-full-width">
+    <input mdInput type="search" placeholder="Effectuer une recherche" [(ngModel)]="searchKey" (keyup.enter)="DoSearch()" [ngModelOptions]="{standalone: true}"/>
+  </md-input-container><br>
+  <button md-raised-button (click)="DoSearch()"> Rechercher </button>
+</div>
 <div class="div-search-scroll">
     <md-card *ngFor="let oneData of getData" class="card-search">
 
