correct css and lang

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,25 @@ a{
   color: #fff;
   text-decoration: none;
 }
-.les-btn {
+
+
+.les-btn-desktop{
   margin-left: 15px;
 }
 
+.les-btn-mobile{
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .les-btn-desktop{
+    margin-left: 0;
+    display: none;
+  }
+  .les-btn-mobile{
+    display: block;
+  }
+  .centrer-btn{
+    margin: 0 auto;
+  }
+}
