--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,8 +1,18 @@
-.profile-area img {
-    max-width: 150px;
-    margin-bottom: 20px;
+h1{
+    margin: 0;
+    margin-left: 20px;
 }
 
-.panel-body h3 {
-    margin-top: 0;
+md-card-subtitle{
+    margin-left: 20px;
+}
+
+img{
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+md-card{
+    background-color: #fff;
 }
