--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,11 +12,22 @@ a{
 
 
 .les-btn-desktop{
-  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .les-btn-mobile{
   display: none;
+}
+
+img{
+  width:40px !important;
+  height:40px !important;
+  border-radius: 100%;
+  margin-left: 15px;
+}
+
+.btn-decale{
+  margin-left:15px;
 }
 
 @media only screen and (max-width: 768px) {
