try add favorites movies

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,4 +14,9 @@
             </md-card-header>
         </md-card>
     </div>
+    <div>
+        <ul>
+            <li ng-repeat="item in movies"><p>{{ item}}</p></li>
+        </ul>
+    </div>
 </div>
